style(bbq): 테스트 IDE 경고 정리 — getFirst()·HttpExchange 자원 자동 해제
BbqApiClientTest의 get(0)을 Java 21 getFirst()로 바꾸고,
RemoteImageDownloaderTest의 respond()에서 finally로 닫던 HttpExchange를
try-with-resources에 넣어 IntelliJ 경고 2건을 없앤다. 닫는 순서와 예외 처리는
같아서 동작은 바뀌지 않는다.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>